cmake_minimum_required(VERSION 3.17)
project(c__)

set(CMAKE_CXX_STANDARD 11)

add_executable(c__ main.cpp 0015.cpp 0003.cpp 0018.cpp 0371.cpp 0445.cpp 0415.cpp 0989.cpp 0005.cpp
        0006.cpp 0007.cpp 0009.cpp 0234.cpp 0011.cpp 0013.cpp 0012.cpp 0273.cpp 0014.cpp 0017.cpp
        0019.cpp 0020.cpp 0021.cpp 0088.cpp 0024.cpp 0035.cpp 0038.cpp 0026.cpp 0027.cpp 0080.cpp 0203.cpp
        0283.cpp 0029.cpp 0046.cpp 0031.cpp 0047.cpp 0033.cpp 0153.cpp 0034.cpp 0036.cpp 0039.cpp
        0040.cpp 0100.cpp 0204.cpp 0205.cpp 0217.cpp 0219.cpp 0043.cpp 0048.cpp 0049.cpp 0023.cpp
        0053.cpp 0054.cpp 0050.cpp 0055.cpp 0056.cpp 0058.cpp 0059.cpp 0061.cpp 0062.cpp 0063.cpp
        0064.cpp 0066.cpp 0069.cpp 0070.cpp 0073.cpp 0074.cpp 0075.cpp 0077.cpp 0078.cpp 0079.cpp
        0082.cpp 0083.cpp 0089.cpp 0090.cpp 0091.cpp 0092.cpp 0093.cpp 0118.cpp 0101.cpp 0104.cpp
        0102.cpp 0103.cpp 0107.cpp 0119.cpp 0136.cpp 0263.cpp 0344.cpp 0383.cpp 0389.cpp 0004.cpp
        0010.cpp 0025.cpp 0030.cpp 0032.cpp 0037.cpp 0041.cpp 0042.cpp 0125.cpp 0044.cpp 0051.cpp
        0060.cpp 0065.cpp 0068.cpp 0072.cpp 0111.cpp 0084.cpp 0085.cpp 0087.cpp 0096.cpp 0095.cpp
        0097.cpp 0098.cpp 0099.cpp 0109.cpp 0110.cpp 0112.cpp 0113.cpp 0114.cpp 0115.cpp 0116.cpp
        0117.cpp 0120.cpp 0121.cpp 0122.cpp 0123.cpp 0132.cpp 0134.cpp 0135.cpp 0137.cpp 0140.cpp
        0142.cpp 0143.cpp 0144.cpp 0145.cpp 0231.cpp 0148.cpp 0149.cpp 0150.cpp 0155.cpp 0164.cpp
        0165.cpp 0168.cpp 0166.cpp 0169.cpp 0173.cpp 0174.cpp 0159.cpp 0161.cpp 0163.cpp 0170.cpp
        2383.c 1605.cpp
        )